ui: fix overflow for long usernames

--- a/querybook/webapp/ui/ViewersList/ViewersList.scss
+++ b/querybook/webapp/ui/ViewersList/ViewersList.scss
@@ -41,5 +41,10 @@
             align-items: center;
             text-align: right;
         }
+
+        .user-badge-wrapper,
+        .user-badge-wrapper .UserBadge-names {
+            overflow: hidden;
+        }
     }
 }
